# tavern

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .tool-versions  build.edn  deps.edn  docker-compose.devtests.yml  docker-compose.hotreload.yml  docker-compose.tests.yml  docker-compose.yml  notes.md  package-lock.json  package.json  requirements.txt  shadow-cljs.edn
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2020-07-25-103017_create_all/: down.sql  up.sql
backend/src/: commands.rs  db.rs  error.rs  main.rs  migrations.rs  schema.rs  types.rs
backend/src/migrations/: V00001__pub.sql  V00002__table.sql  V00003__person.sql
frontend/: .eslintrc.yaml  .gitignore  Dockerfile  deps.edn  fmt.clj  index.html  jest.config.ts  package-lock.json  package.json  pnpm  pnpm-lock.yaml  shadow-cljs.edn  tsconfig.json  vite.config.mts  vite.config.ts
frontend/public/: index.html
frontend/src/: About.tsx  App.tsx  Core.tsx  Data.ts  Home.tsx  Pub.tsx  Store.ts  Table.tsx  Video.tsx  Websocket.ts  WebsocketHelper.ts  commands.ts  main.tsx  messages.ts  wdyr.ts
frontend/src/tavern/: commands.cljs  core.cljs  events.cljs  interceptors.cljs  intervals.cljs  video.cljs
nginx/: localhost.crt  localhost.key  nginx.conf
src/tavern/: core.cljs  events.cljs  intervals.cljs  routes.cljs  video.cljs
tests/: Dockerfile  conftest.py  requirements.in  requirements.txt  test-card-f.mjpeg  test_webcam.py
