[package]
name = "tavern"
version = "0.1.0"
authors = [ "Tom Parker-Shemilt <palfrey@tevp.net>",]
edition = "2018"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-http = "3"
actix-files = "0.6"
actix-web-actors = "4"
anyhow = "1"
thiserror = "1"
serde_json = "1"
lazy_static = "1.4"
parking_lot = "0.11"
r2d2 = "0.8"
r2d2_postgres = "0.14"
schemamama = "0.3"
schemamama_postgres = "0.2"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.uuid]
version = "0.5"
features = [ "serde", "v4",]

[dependencies.postgres]
version = "0.15"
features = [ "with-uuid", "with-chrono",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]
