[package]
name = "tavern"
version = "0.1.0"
authors = [ "Tom Parker-Shemilt <palfrey@tevp.net>",]
edition = "2018"
rust-version = "1.67"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-http = "3"
actix-files = "0.6"
actix-web-actors = "4"
anyhow = "1"
thiserror = "1"
serde_json = "1"
lazy_static = "1.4"
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_postgres = "0.18"
schemamama = "0.3"
schemamama_postgres = "0.3"
log = "0.4"
env_logger = "0.10"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.uuid]
version = "1"
features = [ "serde", "v4",]

[dependencies.postgres]
version = "0.19"
features = [ "with-uuid-1", "with-chrono-0_4",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]
