[package]
name = "tavern"
version = "0.1.0"
authors = [ "Tom Parker-Shemilt <palfrey@tevp.net>",]
edition = "2018"
rust-version = "1.67"

[dependencies]
warp = "0.3"
anyhow = "1"
thiserror = "2"
serde_json = "1"
lazy_static = "1.4"
tokio-stream = "0.1"
futures-util = "0.3"
bb8 = "0.8"
bb8-postgres = "0.8"
log = "0.4"
env_logger = "0.10"
dashmap = "6"

[dependencies.refinery]
version = "0.8"
features = [ "tokio-postgres",]

[dependencies.tokio]
version = "1"
features = [ "rt", "rt-multi-thread", "macros",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.uuid]
version = "1"
features = [ "serde", "v4",]

[dependencies.postgres]
version = "0.19"
features = [ "with-uuid-1", "with-chrono-0_4",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]
